# aqw-opcua-server

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  aqw-opcua-server.sln  settings.json  settings_example.json
.github/workflows/: build.yml  cmake_build.yml  release.yml
aqw-opcua-server/: Application.cpp  CMakeLists.txt  CountryData.cpp  CountryData.h  LocationData.cpp  LocationData.h  Settings.cpp  Settings.h  WeatherData.cpp  WeatherData.h  WebService.cpp  WebService.h  aqw-opcua-server.vcxproj  aqw-opcua-server.vcxproj.filters  open62541.c  open62541.h
dockerfiles/: Dockerfile.full  Dockerfile.simple  README.md
src/: Application.cpp  CMakeLists.txt  CountryData.cpp  CountryData.h  LocationData.cpp  LocationData.h  Settings.cpp  Settings.h  WeatherData.cpp  WeatherData.h  WebService.cpp  WebService.h  open62541.c  open62541.h
